Align reset button with apply button, fix search width to 325px

--- a/static/credit.css
+++ b/static/credit.css
@@ -560,8 +560,13 @@
   align-items: center;
 }
 .mi-search-wrapper {
-  flex: 1;
-  min-width: 200px;
+  width: 325px;
+}
+.mi-search-wrapper > span {
+  width: 100%;
+}
+.mi-feed-filters-row:last-child .mi-filter-btn {
+  margin-left: auto;
 }
 .mi-link-button {
   display: inline-flex;
